style.css
.main {
    height: 50%;
    width: 100%;
}

.flexbox {
    display: flex;
    min-height: 50vh;
}

html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

.input {
  font-size: 28px;
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: 200;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

.result {
  font-size: 56px;
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
  width: 50%;
  margin: auto;
}

